                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 21-02-2005 added: Writing files returns false if unable to do so.  Means that moving files will only
                      allow the source file to be deleted if the copy was successful - thanks to modplug.
  - 21-02-2005 fixed: Highlight sometimes didn't go away in filemanager when doing popup menu stuff.
  - 21-02-2005 fixed: Destination files weren't deleted if copy/move was cancelled.
  - 21-02-2005 added: Option to enable fatal error handler on fatal errors in XBoxMediaCenter.xml.  Defaults to false (off).
  - 21-02-2005 added: ButtonScrollers with <wraparound> off can move to a different control off the top + bottom (or left + right for horizontal scrollers).
  - 21-02-2005 fixed: OSD audio menu lockup
  - 20-02-2005 changed: Enlarge Vobsubs changed to Resize Vobsubs.  Percentage runs from 30% -> 200%.  Defaults to 100%.  If you don't reset your settings on upgrade (which there is no need for) it will be initally set to 30%, which you may wish to change.
  - 20-02-2005 fixed: Buttonscroller focus from another control didn't update background images correctly.
  - 20-02-2005 fixed: OSD crashes when filling listcontrols.
  - 20-02-2005 fixed: Noise level was not used correctly for video filters.
  - 20-02-2005 fixed: various info related things (eg music current pos could show negative times)
  - 20-02-2005 fixed: Kai avatar on toast dialog wasn't shown in correct position.
  - 20-02-2005 changed: Improved handling of resolution switching in GUI->Fullscreen video.
  - 20-02-2005 fixed: Comborenderer small window in different resolution.