@@ -52,7 +52,7 @@ public:
 	void							LoaderFinished();
 
 	char *GetLocation(int iLocation) { return m_szLocation[iLocation]; };
-	char *GetLabel(DWORD dwLabel);
+	const char *GetLabel(DWORD dwLabel);
 	char *GetLastUpdateTime() { return m_szLastUpdateTime; };
 	char *GetCurrentIcon();
 	char *GetCurrentConditions() { return m_szCurrentConditions; };
@@ -92,6 +92,7 @@ protected:
 	char					m_szCurrentWind[256];
 	char					m_szCurrentDewPoint[10];
 	char					m_szCurrentHumidity[10];
+  char          m_szBusyString[256];
 
 	unsigned int			m_iCurWeather;
 	bool							m_bBusy;
